--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -16,13 +16,11 @@ jobs:
       with:
         php-version: '8.0'
     - uses: actions/checkout@v2
-    - name: Copy .env
-      run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-    - name: update Dependencies
-      run: composer update
     - name: Install Dependencies
-      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
-    - name: Generate key
-      run: php artisan key:generate
+      run: composer install
+    - name: migrate
+      run: php artisan migrate
+    - name: serve
+      run: php artisan serve
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
