--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -17,10 +17,16 @@ jobs:
         php-version: '8.0'
     - uses: actions/checkout@v2
     - name: Install Dependencies
-      run: composer install
-    - name: migrate
-      run: php artisan migrate
-    - name: serve
-      run: php artisan serve
+      run: mkdir jai
     - name: Directory Permissions
       run: chmod -R 777 storage bootstrap/cache
+    - name: Rollback Release
+      if: failure() && steps.create_release.outputs.id != ''
+      uses: author/action-rollback@stable
+      with:
+          # Using a known release ID
+        id: ${{ steps.create_release.id }}
+          # Using a tag name
+        tag: ${{ steps.autotagger.outputs.tagname }}
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
