--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -23,6 +23,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Install Dependencies
       run: mkdir jai
+    - name: composer install
+      run: composer install
     - name: Rollback Release
       if: failure() && steps.create_release.outputs.id != ''
       uses: author/action-rollback@stable
