--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -11,5 +11,5 @@ jobs:
     runs-on: self-hosted
     steps:
     - name: change path
-      run: cd /githubaction/sample-laravel-test/
-      run: mkdir jai
+    - run: cd /githubaction/sample-laravel-test/
+    - run: mkdir jai
