--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -14,8 +14,11 @@ jobs:
       run: |
         cd /githubaction/sample-laravel-test/
         mkdir jai
-    - name: Tag
-      id: autotagger
-      uses: butlerlogic/action-autotag@stable
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: butlerlogic/action-autotag@stable
       with:
         GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
