--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -14,10 +14,14 @@ jobs:
       run: |
         cd /githubaction/sample-laravel-test/
         mkdir output
-  build:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - uses: butlerlogic/action-autotag@stable
-      with:
-        GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+build:
+  runs-on: ubuntu-latest
+  steps:
+  - uses: actions/checkout@v2
+    with:
+      fetch-depth: '0'
+    - name: Bump version and push tag
+      uses: anothrNick/github-tag-action@1.26.0
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        WITH_V: true
