--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -20,8 +20,8 @@ build:
   - uses: actions/checkout@v2
     with:
       fetch-depth: '0'
-    - name: Bump version and push tag
-      uses: anothrNick/github-tag-action@1.26.0
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        WITH_V: true
+  - name: Bump version and push tag
+    uses: anothrNick/github-tag-action@1.26.0
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      WITH_V: false
