--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -13,14 +13,14 @@ jobs:
     - name: change path
       run: |
         cd /githubaction/sample-laravel-test/
-        mkdir output
-build:
-  runs-on: ubuntu-latest
-  steps:
-  - uses: actions/checkout@v2
-    with:
-      fetch-depth: '0'
-  - uses: anothrNick/github-tag-action@1.26.0
-    env:
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      WITH_V: false
+        mkdir final
+  build:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: '0'
+    - uses: anothrNick/github-tag-action@1.26.0
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        WITH_V: false
