--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -17,6 +17,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     - name: Bump version and push tag
+      steps:
       if: ${{ github.event_name == 'push' }}
       uses: anothrNick/github-tag-action@1.26.0
       env:
