--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -18,8 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     - name: Bump version and push tag
       steps:
-      if: ${{ github.event_name == 'push' }}
-      uses: anothrNick/github-tag-action@1.26.0
+    - uses: anothrNick/github-tag-action@1.26.0
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         WITH_V: true
