--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -13,6 +13,7 @@ jobs:
     - name: change path
       run: |
        cd /githubaction/sample-laravel-test
+       git pull
        touch first-test.txt
        
        
